--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,5 @@
     <string name="showcase_drawer_account">This is your account. You can register one for free!</string>
     <string name="showcase_drawer_createaccount">It\'s easy, just click here!</string>
     <string name="title_event_list_location_coor">Events near (%1$s N, %2$s E)</string>
+    <string name="title_activity_auth_email">Email Authentication</string>
 </resources>
