--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -152,4 +152,6 @@
     <string name="map_dialog_whats_there">Cosa c\'è qui?</string>
     <string name="title_event_list_location_coor">Eventi vicino a (%1$s N, %2$s E)</string>
     <string name="title_activity_auth_email">Autenticazione con Email</string>
+    <string name="last_known_location_fail">Ricerca posizione in corso, riprova poi</string>
+    <string name="last_known_location_ok">Posizione trovata nel raggio di $1%d metri</string>
 </resources>
