--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,9 +184,11 @@
     <string name="last_known_location_fail">Still acquiring position, try again</string>
     <string name="last_known_location_ok">Location set with accuracy of $1%d metres</string>
 
-    <string name="com.twitter.sdk.android.CONSUMER_KEY">Q5WsTVBfhxzGk656f6rUEUDND</string>
-    <string name="com.twitter.sdk.android.CONSUMER_SECRET">3a0cDXxApxtcujE9vmNObwPjf8DxTjD9W0vVs05lRPdahB5lwH</string>
+    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">Q5WsTVBfhxzGk656f6rUEUDND</string>
+    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">3a0cDXxApxtcujE9vmNObwPjf8DxTjD9W0vVs05lRPdahB5lwH</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="twitter_msg">Tweet using #NeighborhoodSecurity and providing a location to show your tweet on the map</string>
+    <string name="twitter_title" translatable="false">Twitter</string>
 </resources>
